# tftf-api

./: .gitignore  .vc-installed-files  README.md  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  render.yaml  test_in_memory.py
.claude/agents/: vc-ui-ux-designer.md
.claude/hooks/lib/: vc-config-utils.cjs
.claude/skills/vc-agent-browser/: SKILL.md
.claude/skills/vc-chrome-devtools/: SKILL.md
.claude/skills/vc-chrome-devtools/scripts/: reload-and-listen.js
.claude/skills/vc-frontend-design/: SKILL.md
.claude/skills/vc-frontend-design/references/: extraction-output-templates.md  workflow-3d.md  workflow-immersive.md  workflow-quick.md  workflow-screenshot.md  workflow-video.md
.claude/skills/vc-merge-worktree/: SKILL.md
.claude/skills/vc-publish/references/: vc-publish.md
.claude/skills/vc-repomix/: SKILL.md
.claude/skills/vc-repomix/scripts/: repomix_batch.py
.claude/skills/vc-setup/: SKILL.md
.claude/skills/vc-setup/references/: vc-setup.md
.claude/skills/vc-tech-graph/: SKILL.md
.claude/skills/vc-update/: SKILL.md
.claude/skills/vc-update/references/: vc-update.md
.claude/skills/vc-watzup/: SKILL.md
.claude/skills/vc-watzup/scripts/: watzup-scan.cjs
.claude/skills/vc-xia/: SKILL.md
.codex/agents/: vc-ui-ux-designer.toml  vc-update-process-agent.toml
.codex/hooks/: scout-block.cjs
.codex/hooks/.logs/: hook-log.jsonl
.codex/hooks/lib/: privacy-checker.cjs  vc-config-utils.cjs
.github/workflows/: ci.yml
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  package.json  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/core/: config.py  logging.py
apps/api/app/data/: api_keys.py
apps/api/app/routes/: graphs.py  routes.py
apps/api/app/schemas/: graph.py  route.py
apps/api/app/services/: graph_service.py  route_service.py
apps/api/native/: CMakeLists.txt  README.md
apps/api/native/data/: graph.json
apps/api/native/src/: tftf_graph_builder.cpp  tftf_runner.cpp
apps/api/native/src/TFTFGraph/: TFTFGraph.cpp  TFTFGraph.h
apps/api/native/src/TFTFGraph/Helpers/: helpers.cpp  helpers.h
apps/api/scripts/: build-native.mjs  run-python.mjs  setup-python-env.mjs
apps/api/tests/: test_graph_service.py  test_health.py  test_route_service.py
apps/web/: components.json  package.json  vite.config.ts
apps/web/public/: manifest.json  site.webmanifest
apps/web/src/components/playground/: documentation-sections.tsx  model.ts  playground-section.tsx  request-form.tsx  response-panel.tsx  site-chrome.tsx
apps/web/src/lib/: logger.ts
apps/web/src/routes/: __root.tsx  index.tsx
docs/: DP-03-api_keys_schema_design.md
process/context/: all-context.md  generated-skills-catalog.json
process/context/native-routing/: all-native-routing.md
process/context/planning/: all-planning.md
process/context/tests/: all-tests.md  browser-automation.md
process/context/uxui/: all-uxui.md  uiux.md
process/features/route-calculation/: _GUIDE.md
process/general-plans/active/: graph-builder-geojson_PLAN_01-06-26.md
supabase/migrations/: 20260603104300_api_keys.sql
